# Self-HealOps

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  selfhealops.db  setup.sh  test_agent.py  test_batch.py  test_multi_errors.py
.github/workflows/: ci.yml
backend/: main.py
backend/agents/: core.py  prompts.py  schemas.py
backend/api/v1/: __init__.py  actions.py  analyses.py  auth.py  incidents.py  validations.py  webhooks.py
backend/core/: config.py  dependencies.py  logging.py  security.py  telemetry.py
backend/database/: base.py  repository.py  session.py
backend/models/: __init__.py  action.py  analysis.py  audit_log.py  evidence.py  incident.py  learning_pattern.py  user.py  validation.py
backend/schemas/: action.py  analysis.py  incident.py  token.py  user.py  validation.py  webhook.py
backend/services/: execution_service.py  github.py  learning.py  nim.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_database.py  test_execution_service.py  test_github.py  test_nim.py  test_security.py  test_workflow.py
backend/workers/: worker.py
backend/workflows/: graph.py  state.py
docs/: state_definitions.md  workflow_diagram.md
infrastructure/grafana/dashboards/: selfhealops.json
infrastructure/helm/selfhealops/: Chart.yaml  values.yaml
infrastructure/k8s/base/: deployment.yaml  service.yaml
migrations/: env.py
migrations/versions/: b3697ff62062_init.py
